huge overhaul in adding custom perks